@@ -428,55 +428,4 @@ contains
 
 end module glimmer_ncdf
 
-module glimmer_scales
-  !*FD this module holds scales for various fields
-
-  use glimmer_global, only : dp
-
-  real(dp) :: scale2d_f1, scale2d_f2, scale2d_f3, scale2d_f4, scale2d_f5, scale2d_f6, scale2d_f7, scale2d_f8, scale2d_f9
-  real(dp) :: scale3d_f1, scale3d_f2, scale3d_f3, scale3d_f4, scale3d_f5, scale3d_f6, scale3d_f7, scale3d_f8, scale3d_f9
-
-!EIB!  !MAKE_RESTART
-!EIB!#ifdef RESTARTS
-!EIB!#define RST_GLIMMER_SCALES
-!EIB!#include "glimmer_rst_head.inc"
-!EIB!#undef RST_GLIMMER_SCALES
-!EIB!#endif
-
-contains
-
-!EIB!#ifdef RESTARTS
-!EIB!#define RST_GLIMMER_SCALES
-!EIB!#include "glimmer_rst_body.inc"
-!EIB!#undef RST_GLIMMER_SCALES
-!EIB!#endif
-
-  subroutine glimmer_init_scales
-    !*FD calculate scale factors (can't have non-integer powers)
-    use glimmer_physcon, only : scyr, gn
-    use glimmer_paramets, only : thk0, tim0, vel0, vis0, len0, acc0
-    implicit none
-
-    scale2d_f1 = scyr * thk0 / tim0
-    scale2d_f2 = scyr * vel0 * thk0
-    scale2d_f3 = vel0 / (vis0 * len0)
-    scale2d_f4 = vel0 * scyr * len0
-    scale2d_f5 = scyr * vel0
-    scale2d_f6 = scyr * vel0 * len0 / (thk0**2)
-    scale2d_f7 = (vel0/(vis0*len0))**(1.0/gn)
-    scale2d_f8 = (vel0/(vis0*len0))**(1.0/gn) * len0 / (scyr * vel0)
-    scale2d_f9 = scyr * acc0
-
-    scale3d_f1 = scyr * vel0
-    scale3d_f2 = vis0 * (vel0/len0)**(gn - 1)
-    scale3d_f3 = scyr * thk0
-    scale3d_f4 = vel0/(vis0*len0)
-    scale3d_f5 = 1.0d0/scale3d_f2**(1.0/gn)
-    scale3d_f6 = scale3d_f4**(1.0/gn)
-    scale3d_f7 = scyr * thk0/tim0
-    scale3d_f8 = vis0*scyr
-    scale3d_f9 = 1.0d0
-  end subroutine glimmer_init_scales
-end module glimmer_scales
-
 
