@@ -50,7 +50,7 @@ module glimmer_scales
   use glimmer_global, only : dp
 
   real(dp) :: scale2d_f1, scale2d_f2, scale2d_f3, scale2d_f4, scale2d_f5, scale2d_f6, scale2d_f7, scale2d_f8, scale2d_f9
-  real(dp) :: scale3d_f1, scale3d_f2, scale3d_f3, scale3d_f4, scale3d_f5, scale3d_f6, scale3d_f7, scale3d_f8
+  real(dp) :: scale3d_f1, scale3d_f2, scale3d_f3, scale3d_f4, scale3d_f5, scale3d_f6, scale3d_f7, scale3d_f8, scale3d_f9
 
 !MH!  !MAKE_RESTART
 !MH!#ifdef RESTARTS
@@ -91,6 +91,7 @@ contains
     scale3d_f6 = scale3d_f4**(1.0/gn)
     scale3d_f7 = scyr * thk0/tim0
     scale3d_f8 = vis0*scyr
+    scale3d_f9 = 1.0d0
   end subroutine glimmer_init_scales
 end module glimmer_scales
 
